--- a/pom.xml
+++ b/pom.xml
@@ -24,10 +24,48 @@
         		<failOnMissingWebXml>false</failOnMissingWebXml>
     		</configuration>
       	</plugin>
+      	
+		<plugin>
+		    <groupId>org.apache.maven.plugins</groupId>
+		    <artifactId>maven-surefire-plugin</artifactId>
+		    <version>2.11</version>
+		    <configuration>
+	        <includes>
+	            <include>**/*.class</include>
+	        </includes>
+            <excludes>
+                <exclude>**/*IntegrationTest.java</exclude>
+            </excludes>
+		    </configuration>
+		</plugin>
+      	
+		<plugin>
+		    <groupId>org.apache.maven.plugins</groupId>
+		    <artifactId>maven-failsafe-plugin</artifactId>
+		    <version>2.19.1</version>
+		    <executions>
+		        <execution>
+		            <id>integration-tests</id>
+		            <goals>
+		                <goal>integration-test</goal>
+		                <goal>verify</goal>
+		            </goals>
+		            <configuration>
+		                <includes>
+		                    <include>**/*.java</include>
+		                </includes>
+				        <groups>
+				            testgroup.nordiccars.integration.IntegrationTest
+				        </groups>
+		            </configuration>
+		        </execution>
+		    </executions>
+		</plugin>
+		
   	</plugins>
     <finalName>nordiccars</finalName>
   </build>
-  
+
   <dependencies>
   	<dependency>
   		<groupId>org.springframework</groupId>
