--- a/.travis.yml
+++ b/.travis.yml
@@ -7,7 +7,9 @@ branches:
     - master
 jobs: 
   include: 
-    script: mvn install -B
+    - 
+      stage: install
+      script: mvn install -B
 
 deploy: 
   skip_cleanup: true
