Set clean build command in order to avoid 2 versions of the same lib in target package when upgraded library. It causes the app does not work.

--- a/.travis.yml
+++ b/.travis.yml
@@ -9,7 +9,7 @@ jobs:
   include: 
     - 
       stage: integration-test
-      script: mvn integration-test -B
+      script: mvn clean integration-test -B
 
 deploy: 
   skip_cleanup: true
